# ingestor

./: .env.exemple  .gitignore  README.md  prompt.md  pyproject.toml  requirements.txt  test_config.py  test_models.py
src/: main.py
src/application/: deduplication_service.py  ingestion_service.py  ioc_extraction_service.py
src/config/: settings.py
src/domain/: models.py
src/infrastructure/: healthcheck.py
src/infrastructure/database/: adapter.py
src/infrastructure/database/migrations/: 001_init.sql  002_fix_fk.sql
src/infrastructure/storage/: adapter.py  hash_utils.py
src/infrastructure/telegram/: adapter.py
src/telegram_media_ingestor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/unit/: test_storage.py
tests/unit/integration/: test_database_dedup.py
